--- a/index.html
+++ b/index.html
@@ -117,11 +117,8 @@
 
     <script>
         // --- CONFIGURATION ---
-        //const GOOGLE_SHEET_CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSGUylX3EFT3bk677txHRCDTQSCs_EFESfbZUynSsO34W-HDVDbrcxi73XOByAXofMhpwnFi6DaMIi1/pub?output=csv'; // !!! REPLACE THIS !!!
-const csvUrls = {
-    masterQuizData: 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQU0g3trsuzht1k41hLH_ZUDFSYJAv-ErkUVjAgXypbNa1OCK8txN3pIL2h79ZFDfs1Uav35ijkc_w-/pub?output=csv',
-    questionData: 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRh4YmhmWCfWkYwLFVUpygYgmy_NHU9VxWXLwqjABpvGzEmOaUU5vzYn0kcpakMQhs96MmG4DIuZM1x/pub?output=csv'
-};
+        const GOOGLE_SHEET_CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSGUylX3EFT3bk677txHRCDTQSCs_EFESfbZUynSsO34W-HDVDbrcxi73XOByAXofMhpwnFi6DaMIi1/pub?output=csv'; // !!! REPLACE THIS !!!
+
         // --- GLOBAL DATA VARIABLE ---
         let currentStudentData = null;
         let allStudentsDataFromSheet = []; // To store all data once fetched
